# awioc

./: .gitignore  README.md  coverage.ini  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  setup.py
examples/http_serve/: app.py
samples/http_server/: __init__.py  http_server.py  ioc.yaml
samples/http_server/.awioc/: manifest.yaml
samples/management_dashboard/: __init__.py  config.py  dashboard.py  http_handler.py  ioc.yaml  management_dashboard.py  models.py
samples/management_dashboard/.awioc/: manifest.yaml
samples/management_dashboard/plugins/: sample_plugin_a.py  sample_plugin_b.py  sample_plugin_c.py
samples/management_dashboard/static/: app.js  index.html  styles.css
samples/management_dashboard/web/: index.html
src/: .gitignore  ioc.py
src/awioc/: __init__.py  __main__.py  api.py  bootstrap.py  container.py  project.py
src/awioc/commands/: __init__.py  add.py  base.py  config.py  generate.py  info.py  init.py  pot.py  remove.py  run.py
src/awioc/components/: __init__.py  events.py  (+4 more)
src/ioc/: __init__.py  __main__.py  api.py  bootstrap.py  container.py  utils.py
tests/: conftest.py
tests/awioc/: test_api.py  test_bootstrap.py  test_bootstrap_comprehensive.py  test_bootstrap_extended.py  test_class_based_components.py  test_container.py  test_container_extended.py  test_coverage_boost.py  test_integration.py  test_project_api.py  test_utils.py
tests/ioc/: test_api.py  test_bootstrap.py  test_bootstrap_extended.py  test_container.py  test_container_extended.py  test_coverage_boost.py  test_integration.py  test_utils.py
(+66 files in other folders)
