[metadata]
name = awioc
version = 0.1.0
description = A Python IoC/DI library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pavalso/awioc
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    awioc = ioc.__main__:main
